--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<ul>
+			<a href="https://www.google.com/">Home</a>
+			<a href="https://www.google.com/">About us</a>
+			<a href="https://www.google.com/">Contact us</a>
+		</ul>
+	</nav>
+	
+	<h1>3 random images</h1>
+	
+	<img src="https://picsum.photos/id/123/200/300" alt="Image1">
+	<img src="https://picsum.photos/id/124/200/300" alt="Image2">
+	<img src="https://picsum.photos/id/125/200/300" alt="Image3">
+	
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
